src/test/ui/lifetimes/lifetime-errors/ex3-both-anon-regions-using-trait-objects.stderr
error[E0623]: lifetime mismatch
  --> $DIR/ex3-both-anon-regions-using-trait-objects.rs:2:10
   |
LL | fn foo(x:Box<dyn Fn(&u8, &u8)> , y: Vec<&u8>, z: &u8) {
   |                     ---  --- these two types are declared with different lifetimes...
LL |   y.push(z);
   |          ^ ...but data from `z` flows into `y` here

error: aborting due to previous error

